# Vulkan-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
.github/: README.md
assets/shaders/: Makefile  cube.frag  cube.vert  mesh.frag  mesh.vert  triangle.frag  triangle.vert
cmake/: 1-Options.cmake  4-External.cmake  5-External.cmake  5-Sources.cmake  6-Examples.cmake  7-Target.cmake
examples/Triangle/: TriangleApplication.cpp  TriangleApplication.hpp
examples/Triangle/assets/shaders/: build.sh  triangle.vert
examples/triangle/: CMakeLists.txt  Main.cpp
include/: Application.hpp  Renderer.hpp
include/Engine/: Platform.hpp
include/VK/: Backend.hpp  Error.hpp  Macros.hpp  Memory.hpp  Types.hpp  Utils.hpp
include/VKE/: Backend.hpp  Error.hpp  Filename.hpp  Macros.hpp  Memory.hpp  Types.hpp
include/lumen/: Application.hpp
include/lumen/graphics/: Mesh.hpp
include/utils/: Filepath.hpp  Types.hpp
include/utils/maths/: Concepts.hpp  Triangle.hpp  Vec.hpp  Vertex.hpp
include/utils/maths/inline/: Vec.inl  Vertex.inl
include/vulkan_backend/: Backend.hpp
include/vulkan_backend/commands/: CommandBuffer.hpp  CommandPool.hpp  CommandQueue.hpp
include/vulkan_backend/core/: Device.hpp  Extensions.hpp  GraphicsContext.hpp  Instance.hpp  ValidationLayers.hpp  VulkanObject.hpp
include/vulkan_backend/core/inline/: VulkanObject.inl
include/vulkan_backend/memory/: Allocator.hpp  MemoryPool.hpp
include/vulkan_backend/pipeline/: Pipeline.hpp  PipelineBuilder.hpp  RenderPass.hpp  Shader.hpp
include/vulkan_backend/renderer/: RenderObject.hpp  RenderWindow.hpp  Renderer.hpp
include/vulkan_backend/resources/: Buffer.hpp  Framebuffer.hpp  Image.hpp  ImageView.hpp  Mesh.hpp  VulkanMesh.hpp
include/vulkan_backend/resources/inline/: Mesh.inl  VulkanMesh.inl
include/vulkan_backend/surface/: Surface.hpp  SwapChain.hpp
include/vulkan_backend/sync/: Fence.hpp  Semaphore.hpp  SyncManager.hpp
include/vulkan_backend/utils/: Config.hpp  Result.hpp  VulkanUtils.hpp
src/: Application.cpp  CMakeLists.txt  Main.cpp  Renderer.cpp
src/Example/: CubeEngine.cpp  CubeEngine.hpp  Main.cpp  TriangleEngine.cpp  TriangleEngine.hpp
src/Lib/Maths/: Base.hpp  Matrix.hpp  Vector.hpp
src/Maths/: Maths.hpp  Vector.hpp
src/Utils/: Filename.cpp
src/VK/Graphics/Swapchain/: Swapchain.cpp  Swapchain.hpp
src/VK/Renderer/: RenderEngine.hpp  RenderLoop.cpp  RenderLoop.hpp
src/VK/Renderer/Engine/: VulkanEngineBase.cpp  VulkanEngineBase.hpp
src/VK/Window/: Platform.cpp  Platform.hpp  Window.cpp  Window.hpp
src/VK/Window/Platform/: Base.hpp  X11.cpp  X11.hpp  Xcb.cpp  Xcb.hpp
src/VKE/Camera/: ThirdPersonCamera.cpp  ThirdPersonCamera.hpp
src/VKE/Core/: Time.cpp  Time.hpp
src/VKE/Graphics/: VulkanEngineBase.cpp  VulkanEngineBase.hpp  VulkanObject.cpp  VulkanObject.hpp
src/VKE/Graphics/Context/: VulkanContext.cpp  VulkanContext.hpp
src/VKE/Graphics/Descriptor/: VulkanDescriptorSet.cpp  VulkanDescriptorSet.hpp  VulkanVertexDescriptor.cpp  VulkanVertexDescriptor.hpp
src/VKE/Graphics/Device/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanDevice.cpp  VulkanDevice.hpp
src/VKE/Graphics/Engine/: GameEngine.cpp  GameEngine.hpp  VulkanEngineBase.cpp  VulkanEngineBase.hpp  VulkanEngineInterface.hpp
src/VKE/Graphics/Engine/Base/: VulkanEngineBase.cpp  VulkanEngineBase.hpp  VulkanEngineBaseCreate.cpp  VulkanEngineBaseDestroy.cpp
src/VKE/Graphics/Pipelines/: VulkanPipelines.cpp  VulkanPipelines.hpp
src/VKE/Graphics/Shader/: UniformCamera.cpp  UniformCamera.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanUniform.cpp  VulkanUniform.hpp
src/VKE/Graphics/Shader/Base/: VulkanShaderBase.cpp  VulkanShaderBase.hpp  VulkanUniformBase.cpp  VulkanUniformBase.hpp
src/VKE/Graphics/Swapchain/: SwapchainBase.cpp  SwapchainBase.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
src/VKE/Maths/: Base.hpp  Maths.cpp  Maths.hpp  Matrix.cpp  Matrix.hpp  Vector.hpp  Vertex.hpp
src/VKE/Meshes/: MeshCube.cpp  MeshCube.hpp  MeshObject.cpp  MeshObject.hpp
src/VKE/Renderer/: RenderEngine.hpp  RenderLoop.cpp  RenderLoop.hpp
src/VKE/Scene/Camera/: Camera.hpp  ThirdPersonCamera.cpp  ThirdPersonCamera.hpp  ThridPersonCamera.hpp
src/VKE/Systems/: EventTypes.hpp  MouseEvent.cpp  MouseEvent.hpp
src/VKE/Window/: Window.cpp  Window.hpp
src/VKE/Window/Platform/: Base.hpp  Xcb.cpp  Xcb.hpp
src/lumen/: Application.cpp
src/utils/: Filepath.cpp
src/utils/maths/: Vertex.cpp
src/vulkan_backend/commands/: CommandBuffer.cpp  CommandPool.cpp  CommandQueue.cpp
src/vulkan_backend/core/: Device.cpp  Extensions.cpp  GraphicsContext.cpp  Instance.cpp  ValidationLayers.cpp
src/vulkan_backend/memory/: Allocator.cpp  MemoryPool.cpp
src/vulkan_backend/pipeline/: Pipeline.cpp  PipelineBuilder.cpp  RenderPass.cpp  Shader.cpp
src/vulkan_backend/renderer/: RenderWindow.cpp  Renderer.cpp
src/vulkan_backend/resources/: Buffer.cpp  Framebuffer.cpp  Image.cpp  ImageView.cpp  VulkanMesh.cpp
src/vulkan_backend/surface/: Surface.cpp  SwapChain.cpp
src/vulkan_backend/sync/: Fence.cpp  Semaphore.cpp  SyncManager.cpp
src/vulkan_backend/utils/: Config.cpp  Result.cpp  VulkanUtils.cpp
tests/Maths/: Matrix.cpp  Vector.cpp
